otro cambio mas

--- a/ev3segurito1/Views/Registro/Index.cshtml
+++ b/ev3segurito1/Views/Registro/Index.cshtml
@@ -18,7 +18,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Id</td>
+                <td>@item.IDRegistro</td>
                 <td>@item.Nombre</td>
                 <td>@item.FechaCreacion.ToShortDateString()</td>
             </tr>
